fixed footer center alignment when xs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -179,4 +179,8 @@
     margin-right:20%;
     padding: auto;
   }
+
+  .footersection ul {
+    text-align: center;
+  }
 }
